# fantasy_stattracker

./: .gitignore  LICENSE  README.md  auth_key.json  league_info.json  requirements.txt  setup.cfg
fantasy_stattracker/utils/: parsing.py
fantasy_stattracker/web/: api_access.py  auth.py  requester.py
json_files/: league_info.json
scripts/: auth.py  get_league_info.py  initial_setup.py  requester.py  test_notebook.ipynb
scripts/analysis/: get_teams_data.py
