[metadata]
name = fantasy_stattracker
version = 0.0.1
description = Statistics tracker for Yahoo Fantasy
license = MIT License
author = Archie Lee

[options]
packages = fantasy_stattracker
install_requires =
  requests
  importlib; python_version >= "3.5"
  matplotlib>=3.0.3
  numpy>=1.18.2
  pandas>=0.24.2
  seaborn>=0.9.1
  yahoo_oauth>=1.0

[options.packages.find]
exclude = 
  scripts
  test