[metadata]
name = fantasy_stattracker
version = 0.0.1
description = Statistics tracker for Yahoo Fantasy
license = MIT License
author = Archie Lee

[options]
packages = fantasy_stattracker
install_requires =
  matplotlib>=3.3.3
  numpy>=1.19.0
  pandas>=1.0.0
  seaborn>=0.10.0
  yahoo_oauth>=1.0

[options.packages.find]
exclude = 
  scripts
  test
